# trading-game-server

./: .gitignore  Dockerfile  LICENSE  README.md  TECHNICAL.md  compile.sh  pyproject.toml  requirements.txt  run.py
app/: __init__.py  auth.py  bot.py  broadcaster.py  clock.py  config.py  constants.py  exchange.py  game.py  game_manager.py  gateway.py  home.py  lobby_manager.py  login.py  lsfr.py  main.py  matching_engine.py  model.py  order_manager.py  rankings.py  resolution.py  resolver.py  services.py  setup.py  snapshot_manager.py  socket_manager.py  tick.py  trading.py
app/auth/: identity.py  tokens.py
app/blueprints/: __init__.py  connections.py  controller.py  controls.py  game.py  games.py  leaderboard.py  lobby.py  news.py  order.py  orders.py  overseer.py  queries.py  query.py  snapshot.py  socket.py  trading.py
app/bots/: __init__.py  bot_manager.py  flat.py  sinewave.py  timeseries.py
app/bots/templates/: __init__.py  custom.py  simple_mm.py  sinewave.py  skewed_mm.py
app/clock/: clock.py  flush_orderbook.py  tick.py
app/communication/: broadcast.py  snapshot.py  tick_flush.py
app/control/: resolution.py  setup.py  snapshot.py  state.py
app/exchange/: cancellation.py  entry.py  executor.py
app/matching_engine/: matching_engine.py
app/overseer/: game_manager.py  identity.py  tokens.py  validation.py
app/state/: states.py
app/state/live/: bankruptcy.py  margin.py  positions.py  (+1 more)
app/trading/: cancellation.py  entry.py  trade_update.py
app/utils/: helpers.py  services.py  socketio.py  storage.py  tokens.py
instance/: game_data.sqlite
(+7 files in other folders)
