[project]
authors = [{name = "Alan W", email = "awangc31s@gmail.com"}]
dependencies = []
name = "trading-game-server"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
trading_game_server = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
flask-sqlalchemy = ">=3.1.1,<4"
flask = ">=3.1.1,<4"
flask_cors = ">=4.0.0,<5"
flask-socketio = ">=5.5.1,<6"
valkey-py = ">=6.1.0,<7"
gevent = ">=25.5.1,<26"
